Fix poorly cropped avatars

--- a/ESE-2019-Project/frontend/src/app/pages/selling/orders/orders.component.scss
+++ b/ESE-2019-Project/frontend/src/app/pages/selling/orders/orders.component.scss
@@ -15,3 +15,8 @@
     cursor: pointer;
     background-color: var(--ion-color-medium);
 }
+
+ion-avatar img {
+    width: 100% !important;
+    height: 100% !important;
+  }
