--- a/ESE-2019-Project/frontend/src/global.scss
+++ b/ESE-2019-Project/frontend/src/global.scss
@@ -69,6 +69,11 @@
   margin-right: 5px;
 }
 
+ion-avatar img {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .greyButton{
     font-size: 12px;
     font-weight: bold;
